# ctr

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE.TXT
include/ctr/: config.hpp  exception_guard.hpp  pointer_like_traits.hpp  small_vector.hpp  uninitialized_alogithms.hpp
src/: CMakeLists.txt  dummy.cpp
test/small_vector/: aliases.compile.pass.cpp  reserve.pass.cpp
test/small_vector/assignment/: move.pass.cpp
test/small_vector/ctor/: copy.pass.cpp  default.pass.cpp  move.pass.cpp
test/small_vector/insertion/: emplace_back.pass.cpp
test/util/: run_config.py  test.config.py.in
